--- a/fj/fitness_jerk/templates/fitness_jerk/profile.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/profile.html
@@ -42,15 +42,15 @@
                     </div>
                     <div class="weight" style="padding: 10px;">
                         <p>{{ user.members.weight }} kg<br></p>
-                        <p style="color: rgb(170, 167, 167);">Current<br>Weight</p>
+                        <p style="color: rgb(170, 167, 167);">Weight</p>
                     </div>
                     <div class="bmi" style="padding: 10px;">
                         <p>{{ BMI }}<br></p>
-                        <p style="color: rgb(170, 167, 167);">Current<br>BMI</p>
+                        <p style="color: rgb(170, 167, 167);">BMI</p>
                     </div>
                     <div class="progress_workouts" style="padding: 10px;">
                         <p>{{ user.members.progress }}<br></p>
-                        <p style="color: rgb(170, 167, 167);">Current<br>Workouts</p>
+                        <p style="color: rgb(170, 167, 167);">Workouts</p>
                     </div>
                 </div>
             </div>
@@ -63,7 +63,7 @@
                 <div class="progress" style="--width: {{ progress }};"><span>{{ progress }}</span></div>
             </div>
         </div>
-        <div class="workout">
+        <div class="workout carousal">
             <h3 style="margin-left: 15px;">Workouts</h3>
 
             <div class="muscles">
