Start: implement usrprofile creation upon googleauth

--- a/fj/fitness_jerk/templates/fitness_jerk/profile.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/profile.html
@@ -30,7 +30,7 @@
             <div class="profile">
                 <h3 style="text-align: left; margin-bottom: 10px;">Profile</h3>
                 <div class="profile_pic">
-                    {% if user.userinfo.image %}
+                    {% if user.userprofile.image %}
                     <img src="{{member.image.url}}" alt="profile-image">
                     {% endif %}
                 </div>
