Fix: landing_page.html -> join us button
Description:
Join us button was visible when logged in
Now is hidden with:
{% if not user.is_authenticated %}
            <a href="{% url 'signup' %}" class="join-us-btn"> Join us </a>
{% endif %}

--- a/fj/fitness_jerk/templates/fitness_jerk/landing_page.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/landing_page.html
@@ -15,7 +15,9 @@
             I know this might sound a bit unusual...
         </p>
         <br><a href="{% url 'about' %}" class="learn-more-btn">Read More ></a>
-        <a href="{% url 'signup' %}" class="join-us-btn"> Join us </a>
+        {% if not user.is_authenticated %}
+            <a href="{% url 'signup' %}" class="join-us-btn"> Join us </a>
+        {% endif %} 
     </div>
 </div>
 </div>
