--- a/fj/fitness_jerk/static/css/styles.css
+++ b/fj/fitness_jerk/static/css/styles.css
@@ -1142,7 +1142,8 @@ label[for="id_image"] {
     }
 }
 
-@media (max-width: 430px) {
+/* large phones */
+@media only screen and (max-width:410px) and (min-height:915px) {
     .about-us-container {
         background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
         backdrop-filter: blur(10px);
@@ -1163,7 +1164,7 @@ label[for="id_image"] {
         font-size: .8rem;
         text-align: left;
         color: whitesmoke;
-        line-height: .83rem;
+        line-height: .95rem;
         z-index: 1;
     }
 
@@ -1216,11 +1217,9 @@ label[for="id_image"] {
     }
 
     .carousal {
-        display: flex;
         overflow-x: auto;
         scroll-snap-type: x mandatory;
         scroll-padding: 0 24px;
-        width: 100%;
     }
 
     .carousal .muscles {
@@ -1318,12 +1317,14 @@ label[for="id_image"] {
         width: auto;
         cursor: pointer;
         margin-top: -65px;
+        flex-direction: row;
+        justify-content: normal;
     }
 
     .workout h3 {
-        position: absolute;
+        position: fixed;
         display: flex;
-        margin-left: 0;
+        margin-left: 30%;
         background: none;
         box-shadow: none;
         border-bottom: 2px solid black;
@@ -1335,5 +1336,437 @@ label[for="id_image"] {
         background: none;
         box-shadow: none;
         margin-top: 50px;
+    }
+}
+
+
+/* medium phones */
+
+
+@media only screen and (min-width:350px) and (max-height:844px) {
+    .about-us-container {
+        background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+        backdrop-filter: blur(10px);
+        border-radius: 16px;
+        border: 1px solid rgba(255, 255, 255, 0.2);
+        box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.4);
+        width: 95%;
+        overflow: auto;
+        font-size: 12px;
+        margin-top: 4rem;
+        height: 81.5%;
+        line-height: 1.015rem;
+        z-index: 1;
+        overflow: none;
+    }
+
+    .about-us {
+        font-size: .8rem;
+        text-align: left;
+        color: whitesmoke;
+        line-height: .75rem;
+        z-index: 1;
+    }
+
+    .home-btn {
+        margin-left: 30%;
+    }
+
+    form.settings_form {
+        display: flex;
+        flex-direction: column;
+        line-height: 0.85rem;
+        align-content: center;
+        color: black;
+    }
+
+    .copyright {
+        display: flex;
+        align-items: center;
+    }
+
+    .profile_settings {
+        display: flex;
+        flex-direction: column;
+        margin-top: 2rem;
+    }
+
+    .profile_image {
+        display: flex;
+        justify-content: left;
+        text-wrap: wrap;
+    }
+
+    .image_top {
+        scale: 75%;
+        border-radius: 50%;
+        transform: translateY(40px);
+    }
+
+    .user_details {
+        padding: 0;
+        margin-top: -50px;
+    }
+
+    .details-txt {
+        transform: translateY(5px);
+    }
+
+    .profile-txt {
+        transform: translateY(5px);
+    }
+
+    .carousal {
+        overflow-x: auto;
+        scroll-snap-type: x mandatory;
+        scroll-padding: 0 24px;
+    }
+
+    .carousal .muscles {
+        flex: 0 0 auto;
+        scroll-snap-align: start;
+        width: 50%;
+        background: none;
+        height: 215px;
+    }
+
+    .row {
+        display: block;
+        align-content: center;
+        background: whitesmoke;
+        border-radius: 18px;
+        height: 81%;
+        width: 92%;
+        position: relative;
+        overflow: hidden;
+    }
+
+    .rightcolumn {
+        display: block;
+        padding: 0;
+    }
+
+    .intro {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+    }
+
+    .post {
+        position: absolute;
+        display: block;
+        align-content: center;
+        background: none;
+        box-shadow: none;
+        text-align-last: center;
+        font-weight: 700;
+        margin-top: -100px;
+        line-height: 1rem;
+    }
+
+    .profile {
+        display: block;
+        background: none;
+        box-shadow: none;
+        text-align-last: center;
+        margin-top: -15px;
+        width: 100%;
+    }
+
+    .profile_pic img {
+        width: 100px;
+        height: auto;
+    }
+
+    .member-progress {
+        background: none;
+        box-shadow: none;
+        position: relative;
+        display: inline-block;
+    }
+
+    .member-progress h2 {
+        margin-bottom: 0px;
+        margin-left: 100px;
+        margin-top: -10px;
+        width: 100%;
+    }
+
+    .progress-bar {
+        position: fixed;
+        align-content: center;
+        width: 85%;
+        margin-top: -60px;
+    }
+
+    .progress {
+        position: relative;
+        margin-left: 30px;
+    }
+
+    .leftcolumn {
+        width: 100%;
+        margin-top: -170px;
+    }
+
+    .workout {
+        display: flex;
+        align-content: center;
+        box-shadow: none;
+        width: auto;
+        cursor: pointer;
+        margin-top: -65px;
+        flex-direction: row;
+        justify-content: normal;
+    }
+
+    .workout h3 {
+        position: fixed;
+        display: flex;
+        margin-left: 30%;
+        background: none;
+        box-shadow: none;
+        border-bottom: 2px solid black;
+
+    }
+
+    .details {
+        display: flex;
+        background: none;
+        box-shadow: none;
+        text-wrap: nowrap;
+        font-size: .87rem;
+        margin-top: 4rem;
+    }
+}
+
+
+
+/* small phones */
+
+
+@media only screen and (min-width:350px) and (max-height:670px) {
+    .about-us-container {
+        background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+        backdrop-filter: blur(10px);
+        border-radius: 16px;
+        border: 1px solid rgba(255, 255, 255, 0.2);
+        box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.4);
+        width: 95%;
+        overflow: auto;
+        font-size: 12px;
+        margin-top: 4rem;
+        height: 80%;
+        line-height: 1.015rem;
+        z-index: 1;
+        overflow: scroll;
+    }
+
+    .about-us {
+        font-size: 1rem;
+        text-align: left;
+        color: whitesmoke;
+        line-height: 1rem;
+        z-index: 1;
+    }
+
+    .home-btn {
+        margin-left: 30%;
+    }
+
+    form.settings_form {
+        display: flex;
+        flex-direction: column;
+        line-height: 0.85rem;
+        align-content: center;
+        color: black;
+    }
+
+    .login-box {
+        margin-top: -15px;
+    }
+
+    .quote-small {
+        font-size: .8rem;
+    }
+
+    .alert .alert-danger {
+        font-size: 1rem;
+        margin-top: 10px;
+    }
+
+    .quote-text {
+        font-size: 2rem;
+        line-height: 2.5rem;
+    }
+
+    .copyright {
+        display: flex;
+        align-items: center;
+    }
+
+    .profile_settings {
+        display: flex;
+        flex-direction: column;
+        margin-top: 2rem;
+    }
+
+    .profile_image {
+        display: flex;
+        justify-content: left;
+        text-wrap: wrap;
+    }
+
+    .image_top {
+        scale: 75%;
+        border-radius: 50%;
+        transform: translateY(40px);
+    }
+
+    .user_details {
+        padding: 0;
+        margin-top: -50px;
+    }
+
+    .details-txt {
+        transform: translateY(5px);
+    }
+
+    .profile-txt {
+        transform: translateY(5px);
+    }
+
+    .carousal {
+        overflow-x: auto;
+        scroll-snap-type: x mandatory;
+        scroll-padding: 0 24px;
+        background: blue;
+        background-color: none;
+        border-radius: 0px;
+        border: none;
+        position: relative;
+        align-content: center;
+        text-align: center;
+
+    }
+
+    .carousal .muscles {
+        flex: 0 0 auto;
+        scroll-snap-align: start;
+        width: 50%;
+        background: none;
+        height: 215px;
+
+    }
+
+    .row {
+        display: block;
+        align-content: center;
+        background: whitesmoke;
+        border-radius: 18px;
+        height: 77.5%;
+        width: 95%;
+        position: relative;
+        overflow: hidden;
+    }
+
+    .rightcolumn {
+        display: block;
+        padding: 0;
+    }
+
+    .intro {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+    }
+
+    .post {
+        position: absolute;
+        display: block;
+        align-content: center;
+        background: none;
+        box-shadow: none;
+        text-align-last: center;
+        font-weight: 700;
+        margin-top: -100px;
+        line-height: 1rem;
+    }
+
+    .profile {
+        display: block;
+        background: none;
+        box-shadow: none;
+        text-align-last: center;
+        margin-top: -15px;
+        width: 100%;
+    }
+
+    .profile_pic img {
+        width: 100px;
+        height: auto;
+    }
+
+    .member-progress {
+        background: none;
+        box-shadow: none;
+        position: relative;
+        display: inline-block;
+    }
+
+    .member-progress h2 {
+        margin-bottom: 0px;
+        margin-left: 100px;
+        margin-top: -10px;
+        width: 100%;
+    }
+
+    .progress-bar {
+        position: fixed;
+        align-content: center;
+        width: 85%;
+        margin-top: -45px;
+    }
+
+    .progress {
+        position: relative;
+        margin-left: 30px;
+    }
+
+    .leftcolumn {
+        width: 100%;
+        margin-top: -170px;
+    }
+
+    .workout {
+        display: flex;
+        align-content: center;
+        box-shadow: none;
+        width: auto;
+        cursor: pointer;
+        margin-top: -65px;
+        flex-direction: row;
+        justify-content: normal;
+    }
+
+    .workout h3 {
+        position: fixed;
+        display: flex;
+        margin-left: 30%;
+        background: none;
+        box-shadow: none;
+        border-bottom: 2px solid black;
+
+    }
+
+    .details {
+        display: flex;
+        background: none;
+        box-shadow: none;
+        text-wrap: nowrap;
+        font-size: .87rem;
+        margin-top: 4rem;
     }
 }
