Updated class name for H3 to center it on media querries

--- a/fj/fitness_jerk/templates/fitness_jerk/profile.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/profile.html
@@ -64,7 +64,7 @@
             </div>
         </div>
         <div class="workout carousal">
-            <h3 style="margin-left: 15px;">Workouts</h3>
+            <h3 class="workout_txt;">Workouts</h3>
 
             <div class="muscles">
                 <a href="{% url 'workout' exercise_type='build-muscle' %}">
