fixed landing page to not show join us if the user is logged in and fixed progress bar percentage

--- a/fj/fitness_jerk/static/css/styles.css
+++ b/fj/fitness_jerk/static/css/styles.css
@@ -448,9 +448,10 @@ img {
     text-align: left;
     background-color: whitesmoke;
     border-radius: 16px;
-    padding: 20px;
     box-shadow: 0px 5px 12px #292929;
     padding: 15px;
+    padding-left: 30px;
+    padding-right: 30px;
     margin-bottom: 20px;
 
 }
