Refactor: delete redundant Posts model
Description:
Everytime the user finished a workout, a post would be written
to the database. These list of posts was accessed to retrieve
a single post (always the last one) to display it on profile page.
The same behaviour was achieved by creating random posts when
accessing profile_view.

Benefits: database won't get bloated with unnecessary data

--- a/fj/fitness_jerk/templates/fitness_jerk/profile.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/profile.html
@@ -21,11 +21,8 @@
                     <h1 style="text-transform: capitalize; margin-left: 10px;">{{user.username}}</h1>
                 </div>
                 <br>
-                {% if posts.post %}
-                <p>{{ posts.post }}</p>
-                {% else %}
-                <p>Welcome. Finally started you Bastard!!!</p>
-                {% endif %}            
+                
+                <p>{{ motivational_msg }}<p>
             </div>
             <div class="profile">
                 <h3 style="text-align: left; margin-bottom: 10px;">Profile</h3>
