no major changes

--- a/fj/fitness_jerk/templates/fitness_jerk/profile.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/profile.html
@@ -29,7 +29,7 @@
                 <h3 style="text-align: left; margin-bottom: 10px;">Profile</h3>
                 <div class="profile_pic">
                     {% if user.userprofile.image %}
-                    <img src="{{member.image.url}}" alt="profile-image">
+                    <img src="{{user.userprofile.image.url}}" alt="profile-image">
                     {% endif %}
                 </div>
                 <hr>
